Implemented Get API for TripPool details and displaying it in the frontend

--- a/src/App.css
+++ b/src/App.css
@@ -92,6 +92,12 @@
   padding-right: 10px;
 }
 
+.TripPool{
+  width: 60%;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
 .search{
   width: 60%;
   height: 100%;
